[package]
name = "kvs"
version = "0.1.0"
authors = ["Wietse <wietse.j@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = {version = "~2.33.3", features = ["yaml"]}

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[lib]
test = false

[[bin]]
name = "kvs"
test = false
