[package]
name = "kvs"
version = "0.1.0"
authors = ["Wietse <wietse.j@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
time = "0.2"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false

[[bin]]
name = "kvs"
test = false
